fix: layout, delete any, modify getCroppedText

--- a/src/components/ProfileCard/ContentCard/style.css
+++ b/src/components/ProfileCard/ContentCard/style.css
@@ -20,6 +20,7 @@
   font-size: 24px;
   line-height: 27.6px;
   color: #3a3a3a;
+  word-break: break-word;
 }
 
 .card-repo-header-text__description {
@@ -27,6 +28,7 @@
   font-size: 20px;
   line-height: 28px;
   color: #3a3a3a;
+  word-break: break-word;
 }
 
 .card-repo-statistics {
